// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewRunParameters does not display any text fields if there are no parameters 1`] = `
<div>
  <div
    className="header"
  >
    Run parameters
  </div>
  <div>
    This pipeline has no parameters
  </div>
</div>
`;

exports[`NewRunParameters shows button for json parameters 1`] = `
<div>
  <div
    className="header"
  >
    Run parameters
  </div>
  <div>
    Specify json parameters required by the pipeline
  </div>
  <div>
    <EnhancedTextField
      handleParamChange={[MockFunction]}
      index={0}
      key="0"
      param={
        Object {
          "name": "testParam",
          "value": "{\\"test\\":\\"value\\"}",
        }
      }
    />
  </div>
</div>
`;

exports[`NewRunParameters shows parameters 1`] = `
<div>
  <div
    className="header"
  >
    Run parameters
  </div>
  <div>
    Specify parameters required by the pipeline
  </div>
  <div>
    <EnhancedTextField
      handleParamChange={[MockFunction]}
      index={0}
      key="0"
      param={
        Object {
          "name": "testParam",
          "value": "testVal",
        }
      }
    />
  </div>
</div>
`;
